# Sniffles2_plot

./: .gitignore  DataClasses.py  README.md  arg_parser.py  functions_variables.py  functions_variables_multi.py  functions_variables_single.py  multi_vcf_chat.py  multi_vcf_visualizer.py  multi_visualizer_pipeline.sh  pipeline.py  pyproject.toml  requirements.txt  single_vcf_visulaizer.py  single_visualizer_pipeline.sh  sniffles2_plots.py  tmp.py  vcf_chart.py  vcf_line_parser.py  vcf_visualizer_pipeline.sh  vcf_visulaizer.py
.github/workflows/: build_and_publish.yml
src/: __main__.py  functions_variables_multi.py  functions_variables_single.py  io_class.py  multi_vcf_visualizer.py  schemas.py  single_vcf_visulaizer.py  size_distribution.py  sv_sites_per_genome.py  variant_count.py
src/sniffles2_plot/: __init__.py  __main__.py  schemas.py
src/sniffles2_plot/chart_generator/: __init__.py  functions_variables_multi.py  functions_variables_single.py  size_distribution.py  sv_sites_per_genome.py  variant_count.py
src/sniffles2_plot/cli/: __init__.py  arg_parser.py  entry_point.py  generate_charts.py  multi_vcf_visualizer.py  single_vcf_visulaizer.py  vcf_visulaizer.py
src/sniffles2_plot/helper/: io_class.py
src/sniffles2_plot/parser/: vcf_line_parser.py
tests/integration/: test_chart_generator.py
