[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sniffles2_plot"
version = "0.2.0"
description = "a visualizer tool for plot generating"
readme = "README.md"
requires-python = ">=3.8"
#TODO enter versions
dependencies = [
    "seaborn>=0.11.0,<1",
    "upsetplot>=0.8.0,<1",
    "pandas>=1.1.3,<2",
    "matplotlib>=3.3.2,<4",
]

[project.scripts]
sniffles2_plot = "sniffles2_plot.__main__:main"

